# sound_custom_test

./: D_process_audio.cpp  REAMME.md  asdf.txt  audio_graph.cpp  audio_input  audio_input.cpp  device_check  device_check.cpp  ef.cpp  plot_graph  plot_graph.cpp  record_device  record_device.cpp  requirements.txt
MWmuwon/: CMakeLists.txt  Test_audio.cpp  check-css  check-cxx.cc  main.cpp  main_thread.cpp
MWmuwon/include/: AudioInput.hpp  CalDegree.hpp
MWmuwon/src/: Audio.cpp  _calculate_8_angles.cpp  _categorize_values.cpp  _fft.cpp  _process_audio.cpp
final/: CMakeLists.txt  Test_Degree.cpp  main.cpp
final/src/: A_audio_callback.cpp  A_audio_init.cpp  Audio.hpp  CalDegree.hpp  D_calculate_8_angles.cpp  D_categorize_values.cpp  D_process_audio.cpp  D_select_final_direction.cpp  _categorize_values.cpp  _gcc_phat.cpp  _process_audio.cpp  _select_final_direction.cpp  fft.cpp  gcc_phat.cpp
plot_graph_2/test/: 2audio_not_graph.cpp  2audio_not_graph_gcc_phat.cpp  4audio_not_graph_gcc_phat.cpp  CMakeLists.py  CMakeLists.txt  caldegree.cpp  caldegree_probability.cpp  plot_gcc_phat.cpp  plot_graph_2.cpp  theory.cpp
